--- a/assets/css/global-style.css
+++ b/assets/css/global-style.css
@@ -1,44 +1,54 @@
 /*Paleta de colores global*/
-
 :root {
     /*Objetos*/
-    --bg-color: #7209B7;
-    --footer-bg:#1a1a1a;
-    --panel-1-color: #1a1a1a;
-    --panel-2-color: #FFBA08;
-    --button-1-color: #0c62a0;
-    --button-1-hover-color: #149afa;
-    --button-2-color: #FFBA08;
-    --button-2-hover-color: #af7f06;
+    --bg-header: #290343;
+    --bg-body: #7209B7;
+    --bg-panel: #FFBA08;
+    --bg-footer:#1a1a1a;
+    --bg-button-1: #FFBA08;
+    --bg-button-1-hover: #af7f06;
+    --bg-button-2:  #149afa;
+    --bg-button-2-hover: #0c62a0;
+    --bg-button-3:  #C2000B;
+    --bg-button-3-hover: #810209;
     /*Texto*/
-    --font-dark-color: black;
-    --font-light-color: white;
+    --text-body: white;
+    --text-panel: black;
+    --text-button-1: black;
+    --text-button-2: white;
+    --text-button-3: white;
 }
 
+/*Definicion de tamaño*/
 html {
     box-sizing: border-box;
     font-size: 62.5%;
     /* 1REM = 10px */
 }
 
+/* Utilitarios */
+.text-center {
+    text-align: center;
+}
+
+
+/* Globales */
 *,
 *:before,
 *:after {
     box-sizing: inherit;
 }
 
-
-/* Globales */
-
 body {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 2rem;
     line-height: 1.5;
+    background-color: var(--bg-body);
 }
 
 a {
     text-decoration: none;
-    color: var(--font-title-color);
+    color: var(--text-body);
 }
 
 h1,
@@ -48,7 +58,7 @@ h4,
 h5,
 h6 {
     font-family: 'Bebas Neue', serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
 
 h1 {
@@ -77,38 +87,45 @@ img {
 }
 
 .btn-prim {
-    color: var(--font-button-color);
-    background-color: var(--button-1-hover-color);
-    font-weight: 900;
-    padding: 1rem;
-    transition: background-color .3s ease-out;
-}
-
-.btn-sec {
-    color: var(--font-button-color);
-    background-color: var(--button-2-color);
+    color: var(--text-button-1);
+    background-color: var(--bg-button-1);
     font-weight: 900;
     padding: 1rem;
     transition: background-color .3s ease-out;
 }
 
 .btn-prim:hover {
-    background-color: var(--button-1-hover-color);
+    background-color: var(--bg-button-1-hover);
+}
+
+.btn-sec {
+    color: var(--text-button-2);
+    background-color: var(--bg-button-2);
+    font-weight: 900;
+    padding: 1rem;
+    transition: background-color .3s ease-out;
 }
 
 .btn-sec:hover {
-    background-color: var(--button-2-hover-color);
+    background-color: var(--bg-button-2-hover);
 }
+
+.btn-ter {
+    color: var(--button-3-font-color);
+    background-color: var(--bg-button-3);
+    font-weight: 900;
+    padding: 1rem;
+    transition: background-color .3s ease-out;
+}
+
+.btn-ter:hover {
+    background-color: var(--bg-button-3-hover);
+}
+
 
 .texto-panel{
     padding: 2rem;
-    color: var(--font-panel-color);
-}
-
-/* Utilitarios */
-
-.text-center {
-    text-align: center;
+    color: var(--text-panel);
 }
 
 
@@ -116,7 +133,7 @@ img {
 header{
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 20rem;
-    background-color: var(--bg-color);
+    background-color: var(--bg-header);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -126,7 +143,15 @@ header{
     margin-top: 1rem;
     margin-bottom: 0;
     text-align: left;
-    color: var(--font-light-color);
+    color: var(--text-body);
+    transition: .3s ease-out;
+}
+
+.nombre-sitio:hover {
+    margin-top: 1rem;
+    margin-bottom: 0;
+    text-align: left;
+    color: var(--bg-panel);
 }
 
 header form, header .auth{
@@ -137,49 +162,47 @@ header form, header .auth{
     padding-left: 1rem;
     border-radius: 30px;
     border: 0;
-    width: 40rem;
+    width: 45rem;
     height: 4rem;
     font-size: 2.5rem;
 }
 
-.contenedor-navegacion {
-    border-top: .1rem solid var(--separator-color);
-}
-
-/*.baner {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 55rem;
-}*/
-
 .nav-principal {
-    background-color: var(--panel-2-color);
+    background-color: var(--bg-panel);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.nav-principal .btn-sec{
+.nav-principal .btn-prim{
     text-align: center;
     width: 100%;
     height: 100%;
 }
 
-
 /* Footer */
-
 .site-footer {
     padding: 3rem;
-    background-color: var(--footer-bg);
-    color: var(--font-light-color);
-    border-top: 1px solid var(--separator-color);
+    background-color: var(--bg-footer);
+    color: var(--text-body);
     margin-top: 3rem;
     padding-top: 3rem;
 }
 
-.site-footer h3 {
-    margin-bottom: .5rem;
+.grid-redes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 3rem;
+}
+
+.red img{
+    display: inline;
+    max-height: 3.5rem;
+}
+
+.red span{
+    font-style: italic;
 }
 
 .grid-footer {
@@ -188,14 +211,24 @@ header form, header .auth{
     gap: 2rem;
 }
 
-.footer-menu a {
+.footer-menu a , .red{
     display: block;
     margin-top: .5rem;
     margin-bottom: .5rem;
+    transition: .3s ease-out;
+}
+
+.footer-menu a:hover , .red:hover{
+    display: block;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    transition: .3s ease-out;
+    color: var(--bg-panel);
 }
 
 .copyright {
+    border-top: 1px solid var(--text-body);
     text-align: center;
-    margin-top: 4rem;
-    padding-top: 1rem;
+    padding-top: 2rem;
+    margin-bottom: 0;
 }
