--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -2,9 +2,8 @@
 
 /*Imagen baner*/
 
-.baner {
-    background-image: url('../images/principal.jpg');
-}
+
+/*.baner {}*/
 
 
 /* Categorias */
@@ -137,4 +136,87 @@
 .texto-producto .precio {
     font-size: 2.5rem;
     font-weight: 900;
+}
+
+
+/*Contenido Principal*/
+
+.new {
+    color: var(--font-light-color);
+    text-align: center;
+}
+
+.new h3 {
+    margin-top: 5rem;
+    margin-bottom: 0;
+}
+
+.grid-new {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: 35rem;
+    column-gap: 2rem;
+}
+
+.img-vessel {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.movimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.promo {
+    color: var(--font-dark-color);
+    background-color: var(--panel-2-color);
+    text-align: center;
+}
+
+.promo h2 {
+    margin-bottom: 0;
+}
+
+.grid-promo {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 35rem;
+    column-gap: 3rem;
+}
+
+.promimg {
+    background-color: var(--bg-color);
+    height: 35rem;
+    width: 25rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2REM;
+}
+
+.promimg p {
+    margin: 0;
+}
+
+.promo-head {
+    color: var(--font-light-color);
+    font-size: 6rem;
+}
+
+.promo-sub {
+    color: var(--font-light-color);
+    font-size: 4rem;
+}
+
+.promo-body {
+    color: var(--font-light-color);
+    font-size: 2rem;
+}
+
+.promo-foot {
+    color: var(--font-light-color);
+    font-size: 6rem;
 }
