--- a/assets/css/global-style.css
+++ b/assets/css/global-style.css
@@ -17,6 +17,7 @@
     --text-button-1: black;
     --text-button-2: white;
     --text-button-3: white;
+    --text-error: red;
 }
 
 /*Definicion de tamaño*/
@@ -42,6 +43,7 @@ html {
 body {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 2rem;
+    letter-spacing: 0.15rem;
     line-height: 1.5;
     background-color: var(--bg-body);
 }
@@ -59,6 +61,7 @@ h5,
 h6 {
     font-family: 'Bebas Neue', serif;
     margin: 0 0 2rem 0;
+    color: var(--text-body);
 }
 
 h1 {
@@ -73,12 +76,21 @@ h3 {
     font-size: 3rem;
 }
 
+main{
+    text-align: center;
+}
+
 .contenedor {
     max-width: 120rem;
     margin-top: 0;
     margin-right: auto;
     margin-bottom: 0;
     margin-left: auto;
+}
+
+.modal-contenedor {
+    max-width: 80rem;
+    margin: 0 auto;
 }
 
 img {
@@ -90,6 +102,7 @@ img {
     color: var(--text-button-1);
     background-color: var(--bg-button-1);
     font-weight: 900;
+    letter-spacing: 0.25rem;
     padding: 1rem;
     transition: background-color .3s ease-out;
 }
@@ -102,6 +115,7 @@ img {
     color: var(--text-button-2);
     background-color: var(--bg-button-2);
     font-weight: 900;
+    letter-spacing: 0.25rem;
     padding: 1rem;
     transition: background-color .3s ease-out;
 }
@@ -111,9 +125,10 @@ img {
 }
 
 .btn-ter {
-    color: var(--button-3-font-color);
+    color: var(--text-button-3);
     background-color: var(--bg-button-3);
     font-weight: 900;
+    letter-spacing: 0.25rem;
     padding: 1rem;
     transition: background-color .3s ease-out;
 }
@@ -122,17 +137,54 @@ img {
     background-color: var(--bg-button-3-hover);
 }
 
-
-.texto-panel{
-    padding: 2rem;
+.panel{
+    background-color: var(--bg-panel);
     color: var(--text-panel);
+    margin: 2rem 5rem;
+    padding: 2rem;
+    
 }
+
+.error{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    color: var(--text-error);
+}
+
+/*Formularios*/
+label{
+    display: inline-block;
+    text-align: left;
+    width: 10rem;
+}
+
+input{
+    width: 30rem;
+    height: 4rem;
+    margin: 1rem;
+}
+
+input[type=submit]{
+    padding: 0 4rem;
+    width: auto;
+}
+
+select{
+    height: 4rem;
+    margin: 1rem;
+    width: 30rem;
+}
+
+textarea{
+    margin: 1rem;
+}
+
 
 
 /* Header y Navegacion */
 header{
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 20rem;
     background-color: var(--bg-header);
     display: flex;
     flex-direction: row;
@@ -140,28 +192,31 @@ header{
 }
 
 .nombre-sitio {
-    margin-top: 1rem;
-    margin-bottom: 0;
+    padding-top: 2rem; 
     text-align: left;
     color: var(--text-body);
     transition: .3s ease-out;
 }
 
 .nombre-sitio:hover {
-    margin-top: 1rem;
-    margin-bottom: 0;
-    text-align: left;
     color: var(--bg-panel);
 }
 
-header form, header .auth{
-    padding: 2rem 0;
+header form{
+    padding: 2.5rem 0;
+}
+
+header .auth{
+    display: inline;
+    padding: 4rem 0;
+    margin-left: 2rem; 
 }
 
 .input-busqueda{
-    padding-left: 1rem;
+    padding-left: 1.5rem;
     border-radius: 30px;
     border: 0;
+    margin-right: 0;
     width: 45rem;
     height: 4rem;
     font-size: 2.5rem;
@@ -172,12 +227,17 @@ header form, header .auth{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 2rem;
 }
 
 .nav-principal .btn-prim{
     text-align: center;
     width: 100%;
     height: 100%;
+}
+
+.empleados{
+    margin-top: 3rem;
 }
 
 /* Footer */
@@ -219,10 +279,6 @@ header form, header .auth{
 }
 
 .footer-menu a:hover , .red:hover{
-    display: block;
-    margin-top: .5rem;
-    margin-bottom: .5rem;
-    transition: .3s ease-out;
     color: var(--bg-panel);
 }
 
